tooling/nargo_cli/tests/snapshots/compile_failure/assert_constant_dynamic_slice/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Argument is not constant
  ┌─ src/main.nr:4:5
  │
4 │     assert_constant(&[dynamic_one]);
  │     -------------------------------
  │
  = Call stack:
    1. src/main.nr:4:5

Aborting due to 1 previous error
